--- a/templates/accounts/order_detail.html
+++ b/templates/accounts/order_detail.html
@@ -1,4 +1,4 @@
-{% extends 'adminapp/admin_base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block content %}
@@ -17,7 +17,7 @@
                         <!-- Start .row -->
                         <div class="col-lg-6">
                             <!-- col-lg-6 start here -->
-                            <!-- <img class="logo" src="{%static './images/ck-logo-3.png'%}"> -->
+                            <img class="logo" src="{%static './images/ck-logo-3.png'%}">
                         </div>
                         <!-- col-lg-6 end here -->
                         <div class="col-lg-6">
@@ -80,7 +80,7 @@
                                             </tr>
                                             <tr>
                                                 <th colspan="2" class="text-right">GST:</th>
-                                                <th class="text-center">₹ {{order.GST}} </th>
+                                                <th class="text-center">₹ {{order.tax}} </th>
                                             </tr>
 
                                             <tr>
@@ -91,7 +91,9 @@
                                     </table>
                                 </div>
                             </div>
-                            
+                            <div class="invoice-footer mt25">
+                                <p class="text-center">Thank you for shopping with us!</p>
+                            </div>
                         </div>
                         <!-- col-lg-12 end here -->
                     </div>
