--- a/templates/adminapp/adminlogin.html
+++ b/templates/adminapp/adminlogin.html
@@ -79,7 +79,7 @@ $(document).ready(function() {
                   <button type="submit" class="btn btn-dark btn-block"> Login  </button>
               </div> 
               <div class="form-group">
-                <a href="{% url 'admin_change_password' %}" class="btn btn-dark btn-block"> Change Password </a>
+                {% comment %} <a href="{% url 'admin_change_password' %}" class="btn btn-dark btn-block"> Change Password </a> {% endcomment %}
             </div>
               <!-- form-group// -->    
           </form>
