--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -175,7 +175,7 @@
                             </dl>
                             <dl class="dlist-align">
                                 <dt>Tax:</dt>
-                                <dd class="text-right"> ₹ {{GST}}</dd>
+                                <dd class="text-right"> ₹ {{tax}}</dd>
                             </dl>
                             <dl class="dlist-align">
                                 <dt>Grand Total:</dt>
