--- a/templates/adminapp/productlist.html
+++ b/templates/adminapp/productlist.html
@@ -15,7 +15,7 @@
 					<p class="table_caption  font-weight-bold" style="color: black"> <h4>Product List</h4></p>
 				</caption>
 				<table class="data-table table hover multiple-select-row nowrap" id="myTable">
-					<div class=" d-flex justify-content-center "><a href="{% url 'addproduct' %}" class="btn btn-dark btn-sm col-4">Add Product</a><br></div>
+					<div class=" d-flex my-3 "><a href="{% url 'addproduct' %}" class="btn btn-dark btn-sm col-4">Add Product</a><br></div>
 					<thead>
 						<tr>
 							<th scope="col">Index</th>
