--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -49,7 +49,11 @@
                         <div class="col"> 
                             <div class="input-group input-spinner">
                                 <div class="input-group-prepend">
-                                <a href="{% url 'remove_cart' cart_item.product.id cart_item.id   %}"class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+                                <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}"class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+                                {% comment %} <a class="btn btn-light"
+                                hx-target="{% url 'remove_cart' cart_item.product.id cart_item.id %}"
+                                hx-swap = 'innerHTML'
+                                hx-target='#button-plus'> {% endcomment %}
                                 </div>
                                 <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
                                 <div class="input-group-append">
@@ -66,14 +70,41 @@
         </td>
         <td> 
             <div class="price-wrap"> 
-                <var class="price">₹ {{ cart_item.sub_total}}</var> 
-                <small class="text-muted"> ₹ {{cart_item.product.price}} each </small> 
+                <var class="price">RS.{{ cart_item.sub_total}}</var> 
+                <small class="text-muted"> RS {{cart_item.product.price}} each </small> 
             </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
-        <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a>
+        {% comment %} <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a> {% endcomment %}
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal{{forloop.counter}}">
+             Remove
+            </button>
         </td>
     </tr>
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal{{forloop.counter}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Remove From Cart</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      
+      <div class="modal-body">
+       Are you sure you want to delete this item? 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+         <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" >
+
+        <button type="button" class="btn btn-primary">OK</button></a>
+      </div>
+    </div>
+  </div>
+</div>
     {% endfor %}
    
     </tbody>
@@ -87,11 +118,11 @@
             <div class="card-body">
                 <dl class="dlist-align">
                   <dt>Total price:</dt>
-                  <dd class="text-right">₹ {{total}}</dd>
+                  <dd class="text-right">RS.{{total}}</dd>
                 </dl>
                 <dl class="dlist-align">
                   <dt>GST:</dt>
-                  <dd class="text-right"> ₹ {{tax}}</dd>
+                  <dd class="text-right"> RS.{{tax}}</dd>
                 </dl>
                 <dl class="dlist-align">
                   <dt>Grand Total:</dt>
